--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,11 @@ code {
     monospace;
 }
 
-/* Works on Firefox */
-* {
+/* * {
   scrollbar-width: thin;
   scrollbar-color: #d8d8d8;
 }
 
-/* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -31,4 +29,4 @@ code {
 
 *::-webkit-scrollbar-track {
   background: transparent;
-}
+} */
